# shadowsocks-rust

.github/workflows/: mayhem.yml
crates/shadowsocks-service/fuzz/: Cargo.toml
crates/shadowsocks-service/fuzz/fuzz_targets/: handshake_request.rs
mayhem/: Dockerfile  handshake_request.mayhemfile
